# yandex_contest_invoker_debian

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  build  build.sh  clean  clean.sh  config.sh  fetch  install  install.sh  lxc.conf  system-config.cmake  tests  tests.sh
debian/: changelog  control  rules
